--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
 		<div class="header__wrapper">
 			<button class="header__menu-button" aria-label="Меню"></button>
 
-			<ul class="header__navigation-list navigation-list navigation-list_horizontal">
-				<li class="navigation-list__item navigation-list__item_horizontal">
-					<a class="navigation-list__link navigation-list__link_horizontal" href="#services">Услуги</a>
-				</li>
+			<nav class="header__navigation-list navigation-list navigation-list_horizontal">
+				<ul>
+					<li class="navigation-list__item navigation-list__item_horizontal">
+						<a class="navigation-list__link navigation-list__link_horizontal" href="#services">Услуги</a>
+					</li>
 
-				<li class="navigation-list__item navigation-list__item_horizontal">
-					<a class="navigation-list__link navigation-list__link_horizontal" href="#examples">Портфолио</a>
-				</li>
+					<li class="navigation-list__item navigation-list__item_horizontal">
+						<a class="navigation-list__link navigation-list__link_horizontal" href="#examples">Портфолио</a>
+					</li>
 
-				<li class="navigation-list__item navigation-list__item_horizontal">
-					<a class="navigation-list__link navigation-list__link_horizontal" href="#prices">Стоимость</a>
-				</li>
-			</ul>
-
+					<li class="navigation-list__item navigation-list__item_horizontal">
+						<a class="navigation-list__link navigation-list__link_horizontal" href="#prices">Стоимость</a>
+					</li>
+				</ul>
+			</nav>
 
 			<div class="header__call-wrapper">
 				<a href="tel:++74999955577" class="header__call-link">+7 (499) 995-55-77</a>
 
-				<button class="header__call-button header__call-button_regular">Заказать звонок</button>
-				<button class="header__call-button header__call-button_minimized" aria-label="Заказать звонок"></button>
+				<button class="header__call-button" aria-label="Заказать звонок">Заказать звонок</button>
 			</div>
 		</div>
 	</header>
@@ -58,17 +58,17 @@
 
 				<img class="description__image" alt="Дмитрий Алексеев" src="./img/photo.png">
 
-				<article class="description__article description-article">
+				<section class="description__article description-article">
 					<h1 class="description-article__name">Дмитрий Алексеев</h1>
 
 					<p class="description-article__comment">Frontend-разработчик и веб-верстальщик</p>
 
 					<button class="description-article__button">Узнать больше</button>
-				</article>
+				</section>
 			</div>
 		</div>
 		
-		<article id="services" class="services-article">
+		<section id="services" class="services-article">
 			<h2 class="services-article__heading">Что я делаю</h2>
 				
 			<ul class="services-article__list services-list">
@@ -90,9 +90,9 @@
 			</ul>
 				
 			<button class="services-article__button">Узнать стоимость</button>
-		</article>
+		</section>
 		
-		<article id="examples" class="examples-article">
+		<section id="examples" class="examples-article">
 			<div class="examples-article__wrapper">
 				<h2 class="examples-article__heading">Примеры моих работ</h2>
 
@@ -128,7 +128,7 @@
 
 				<button class="examples-article__button">Заказать проект</button>
 			</div>
-		</article>
+		</section>
 		
 		<div id="prices" class="prices-info">
 			<div class="prices-info__wrapper">
@@ -138,11 +138,11 @@
 				<span class="prices-info__decoration prices-info__decoration_fourth">&lt;div&gt;</span>
 				<span class="prices-info__decoration prices-info__decoration_fifth">{ }</span>
 
-				<article class="prices-info__article prices-article">
+				<section class="prices-info__article prices-article">
 					<h2 class="prices-article__header">Адаптивная вёрстка под все устройства и браузеры от 1000 рублей всего за 4 часа.*</h2>
 
 					<p class="prices-article__comment">* Срок и стоимость могут отличаться от заявленных и рассчитываются  индивидуально, в зависимости от сложности задач.</p>
-				</article>
+				</section>
 			</div>
 		</div>
 	</main>
@@ -198,19 +198,21 @@
 	
 	<footer class="footer">
 		<div class="footer__links bottom-links">
-			<ul class="bottom-links__navigation navigation navigation_vertical">
-				<li class="navigation-list__item navigation-list__item_vertical">
-					<a href="#services">Услуги</a>
-				</li>
+			<nav class="bottom-links__navigation navigation navigation_vertical">
+				<ul>
+					<li class="navigation-list__item navigation-list__item_vertical">
+						<a href="#services">Услуги</a>
+					</li>
 
-				<li class="navigation-list__item navigation-list__item_vertical">
-					<a href="#examples">Портфолио</a>
-				</li>
+					<li class="navigation-list__item navigation-list__item_vertical">
+						<a href="#examples">Портфолио</a>
+					</li>
 
-				<li class="navigation-list__item navigation-list__item_vertical">
-					<a href="#prices">Стоимость</a>
-				</li>
-			</ul>
+					<li class="navigation-list__item navigation-list__item_vertical">
+						<a href="#prices">Стоимость</a>
+					</li>
+				</ul>
+			</nav>
 		
 			<ul class="bottom-links__contact-list contact-list contact-list_center">
 				<li class="contact-list__item">
